# oci-email-delivery-mcp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/codeql/: codeql-rust.yml
.github/codeql/actions-workflow-security/: HighRiskWriteTokenGrant.ql  PullRequestTargetTrigger.ql  qlpack.yml
.github/codeql/actions-workflow-security/suites/: actions-workflow-security.qls
.github/workflows/: code-coverage.yml  codeql-query-tests.yml  codeql.yml  devskim.yml  osv-scanner.yml  release-artifact.yml  rust-baseline.yml
docs/: capability-matrix.md  hosted-release-checklist.md  live-proof-matrix.md  monitoring-runbook.md  no-send-live-proof-2026-06-30.md  public-release-readiness.md
spec/: tool_schema_snapshot.v1.json
src/: config.rs  error.rs  ledger.rs  lib.rs  live.rs  main.rs  redact.rs  response.rs  snapshot.rs
tests/: domain_contracts.rs  stdio_smoke.rs  tool_schema_snapshot.rs
